--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p>Hello, my name is Yoana. I am junior UX designer and I love a smart design that actually improves and eases the user's life. I am eager to learn and to keep improving my skills to become a better designer. Below you can find some of the projects I have done and my previous experiences.  </p>
 	</div>
 
-    <a style="text-decoration:none" href="https://www.google.com/">
+    <a style="text-decoration:none" href="https://yoanadotina.github.io/YoanaDotina/">
         <div class="cv">
             <p1>my previous experiences</p1>
         </div>
