--- a/index.html
+++ b/index.html
@@ -6,42 +6,59 @@
 	<title>Yoana Dotina</title>
 </head>
 
+<style>
+    section {
+        display: block;
+    }
+</style>
+
 <body>
-	<div class="introduction">
-		<h1>Yoana Dotina</h1> 
-		
-		<h2>junior UX designer</h2>
+    <div class="introduction">
+        <h1>Yoana Dotina</h1>
 
-	</div>
+        <h2>junior UX designer</h2>
 
-	<div class="aboutme">
-		<p>Hello, my name is Yoana. I am junior UX designer and I love a smart design that actually improves and eases the user's life. I am eager to learn and to keep improving my skills to become a better designer. Below you can find some of the projects I have done and my previous experiences.  </p>
-	</div>
+    </div>
 
-    <a style="text-decoration:none" href="https://yoanadotina.github.io/YoanaDotina/">
+    <div class="aboutme">
+        <p>Hello, my name is Yoana. I am junior UX designer and I love a smart design that actually improves and eases the user's life. I am eager to learn and to keep improving my skills to become a better designer. Below you can find some of the projects I have done and my previous experiences.  </p>
+    </div>
+
+    <a style="text-decoration:none" href="https://yoanadotina.github.io/YoanaDotina/" target="_blank">
         <div class="cv">
-            <p1>my previous experiences</p1>
+            <p1>My previous experiences</p1>
         </div>
     </a>
 
-    <div class="project1">
-    	<p2>Project Z'ijkant</p2>
-    </div>
+    <a style="text-decoration:none" href="" target="_blank">
+        <div class="cv">
+            <p1>Project Z'ijkant</p1>
+        </div>
+    </a>
 
-    <div class="project2">
-    	<p3>The Dutch Store</p3>
-    </div>
+    <a style="text-decoration:none" href="" target="_blank">
+        <div class="cv">
+            <p1>The Dutch Store</p1>
+        </div>
+    </a>
 
-    <div class="project3">
-    	<p4>Project Public Kindness</p4>
-    </div>
+    <a style="text-decoration:none" href="" target="_blank">
+        <div class="cv">
+            <p1>Project Public Kindness</p1>
+        </div>
+    </a>
 
-    <div class="project4">
-    	<p5>Delft NetWORK 2.0</p5>
-    </div>
-    	
+    <a style="text-decoration:none" href="" target="_blank">
+        <div class="cv">
+            <p1>Delft NetWORK 2.0</p1>
+        </div>
+    </a>
 
+    <a style="text-decoration:none" href="" target="_blank">
+        <div class="cv">
+            <p1>Contact page</p1>
+        </div>
+    </a>
 
-
-
-	</body>
+</body>
+</html>
